--- a/src/Paymill/LlamaKisses/Views/application/head.html
+++ b/src/Paymill/LlamaKisses/Views/application/head.html
@@ -21,6 +21,6 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
 
-MIRO TESTING
+MIRO TESTING hey 
 
 </head>
